force-app/main/default/objects/custom_create111__c/custom_create111__c.object-meta.xml
<CustomObject>
    <label>Custom created object111</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects111</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>