force-app/main/default/objects/custom_create111__c/fields/custom_create_111field552__c.field-meta.xml
<CustomField>
    <fullName>custom_create_111field552__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 111field552</label>
    <type>Checkbox</type>
</CustomField>