force-app/main/default/objects/custom_create111__c/fields/custom_create_111field622__c.field-meta.xml
<CustomField>
    <fullName>custom_create_111field622__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 111field622</label>
    <type>Checkbox</type>
</CustomField>